fixed the styles in css. Spacing(margins, paddings), button/square fade transition animation, background colors, fonts.

--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,44 @@
 body{
 	background-color: #232323;
 	color:white;
+	margin: 0;
+	font-family: "Montserrat", "Avenir";
 }
 
 .square{
 	width:30%;
 	background:purple;
-	border-radius:10%;
+	border-radius:15%;
 	padding-bottom: 30%;
 	float:left;
 	margin: 1.66%;
+	transition: background 0.6s;
+	-webkit-transition: background 0.6s;
+	-moz-transition: background 0.6s;
 }
 
-#containter{
-	margin: 0 auto;
+#container{
+	margin: 25px auto;
 	max-width: 600px;
+}
+
+h1{
+	text-align: center;
+	background: steelblue;
+	margin: 0;
+	font-weight: normal;
+	text-transform: uppercase;
+	line-height:1.1;
+	padding: 20px 0;
+}
+
+#colorDisplay{
+	font-size: 200%;
+}
+
+#message {
+	display:inline-block;
+	width: 20%;
 }
 
 #stripe{
@@ -25,5 +49,25 @@ body{
 }
 
 .selected{
-	background: blue;
+	background: steelblue;
+	color:white;
+}
+
+button{ 
+	border: none;
+	background: none;
+	text-transform: uppercase;
+	height:100%;
+	font-weight: 700;
+	color: steelblue;
+	letter-spacing: 1px;
+	font-size:inherit;
+	transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+}
+
+button:hover{
+	color:white;
+	background:steelblue;
 }
